--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -44,11 +44,95 @@
 }
 
 .gallery-item {
-    width: calc((100% - 60px) / 3);
+    width: calc((100% - 48px) / 3);
+    border: 1px solid #808080;
 }
 
 .gallery-image {
     width: 100%;
-    height: 360px;
+    max-height: 200px;
     object-fit: cover;
+
+}
+
+.image-caption {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 27px;
+}
+
+.caption-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 10px;
+}
+
+.caption-label {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33333;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+
+.caption-value {
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 3px dotted #4e4a4a;
+    border-style: solid solid dotted dotted;
+    border-radius: 50%;
+    /* display: inline-block; */
+    display: none;
+    position: relative;
+    box-sizing: border-box;
+    animation: rotation 2s linear infinite;
+    align-items: center;
+    margin-left: 45%;
+}
+
+.loader::after {
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    border: 3px dotted #FF3D00;
+    border-style: solid solid dotted;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    animation: rotationBack 1s linear infinite;
+    transform-origin: center center;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes rotationBack {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(-360deg);
+    }
 }
